crates/shep-cli/src/lookout/snapshots/shep__lookout__frames__tests__empty.snap
---
source: crates/shep-cli/src/lookout/frames.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                        0 in the flock
host  load  ██░░░░░░░░ 2.31 4.10 3.88 / 10 cores     host mem  ████░░░░░░ 12.4G / 32.0G     0 error…
────────────────────────────────────────────────────────────────────────────────────────────────────
  ID    NAME               STATUS           PID      RESTARTS  EXIT       CPU     MEM       UPTIME  
the flock is empty                                                                                  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
no sheep selected: the flock is empty                                                               
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
 ██ BLEATS no sheep is selected                                                                     
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
q quit   j/k select   / filter   F folds   x stop   R restart   L reload   s settin… control enabled
