crates/shep-cli/src/lookout/snapshots/shep__lookout__frames__tests__errored.snap
---
source: crates/shep-cli/src/lookout/frames.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                                            6 in the flock
                                                                                                                        
host  load  ██░░░░░░░░ 2.31 4.10 3.88 / 10 cores     host mem  ████░░░░░░ 12.4G / 32.0G     1 errored · 0 parked   floc…
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
  ID    NAME        STATUS           PID      RESTARTS  EXIT       CPU     MEM       UPTIME    FOLD        SMIT         
   ██ FLOCK                                                                                                             
  2     api         errored          -        14        1          -       -         1h 18m    edge        -            
  3     billing-r…  waiting-restart  -        3         1          -       -         1h 19m    -           -            
  4     cron        stopped          -        0         SIGTERM    -       -         1h 21m    -           -            
  5     metrics     online           48240    0         -          -       11.0M     1h 32m    -           -            
  0     web         online           48211    0         -          -       182.0M    1h 25m    edge        -            
  1     web         online           48212    0         -          -       178.0M    1h 26m    edge        -            
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ██ SHEEP 2  api   errored   pid -   restarts 14   uptime 1h 18m   cpu -   mem -   fold edge                            
lambs  not read yet                                                                                                     
out  /home/ada/.shep/logs/api-2-out.log   │   err  /home/ada/.shep/logs/api-2-err.log                                   
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ██ BLEATS api  … 1 earlier line not shown                                                                              
out  GET /healthz 200 3ms                                                                                               
out  GET /v1/orders 200 44ms                                                                                            
out  POST /v1/orders 201 88ms                                                                                           
out  GET /v1/orders/8821 200 9ms                                                                                        
out  connection pool: 14/50 in use                                                                                      
q quit   j/k select   / filter   F folds   x stop   R restart   L reload   s settings   e edit   * your… control enabled
